--- a/.github/workflows/build_revxlp.yml
+++ b/.github/workflows/build_revxlp.yml
@@ -2,6 +2,9 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build_revxlp:
+    runs-on: ubuntu-latest
     env:
       working-directory: ./revxlp
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    steps:
+      - uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+        working-directory: ${{env.working-directory}}
