--- a/.github/workflows/build_revxlp.yml
+++ b/.github/workflows/build_revxlp.yml
@@ -2,9 +2,4 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build_revxlp:
-    runs-on: ubuntu-latest
-    env:
-      working-directory: ./revxlp
-    steps:
-      - uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-        working-directory: ${{env.working-directory}}
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
