--- a/.github/workflows/build_revxlp.yml
+++ b/.github/workflows/build_revxlp.yml
@@ -5,14 +5,14 @@ on:
   pull_request:
     paths:
       - 'revxlp/**'
-  workflow_dispatch:
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+  build_revxlp:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Call reusable workflow
-      uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-      working-directory: ./revxlp
+      - name: Call reusable workflow
+        uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+        working-directory: ./revxlp
