--- a/.github/workflows/build_revxlp.yml
+++ b/.github/workflows/build_revxlp.yml
@@ -9,10 +9,8 @@ on:
 jobs:
   build_revxlp:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Call reusable workflow
-        uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-        working-directory: ./revxlp
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    with:
+       build_matrix_path: "./revxlp/build.yaml"
+       config_path: "./revxlp/config"
+       fallback_binary: "./revxlp/bin"
