send the first action out

--- a/.github/workflows/build_revxlp.yml
+++ b/.github/workflows/build_revxlp.yml
@@ -1,10 +1,10 @@
 on: 
   push:
     paths:
-      - 'revxlp/**'
+      # - 'revxlp/**'
   pull_request:
     paths:
-      - 'revxlp/**'
+      # - 'revxlp/**'
 
 jobs:
   build_revxlp:
