fix usage of uses workflow

--- a/.github/workflows/build_revxlp.yml
+++ b/.github/workflows/build_revxlp.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build_revxlp:
-    uses: build_user_config.yml
+    uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
        # build_matrix_path: "./revxlp/build.yaml"
        # config_path: "./revxlp/config"
