--- a/.github/workflows/release_user_config.yml
+++ b/.github/workflows/release_user_config.yml
@@ -1,5 +1,5 @@
 
-name: Reusable user config build
+name: Reusable user config release
 
 on:
   workflow_call:
@@ -30,7 +30,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: ${{ input.archive_name }}_${{ github.sha }}
+          release_name: ${{ inputs.archive_name }}_${{ github.sha }}
           draft: false
           prerelease: false
 
