--- a/.github/workflows/release_user_config.yml
+++ b/.github/workflows/release_user_config.yml
@@ -21,13 +21,13 @@ jobs:
       - name: Download merged artifact
         uses: actions/download-artifact@v3
         with:
-          name: ${{ inputs.archive_name }}
+          name: ${{ inputs.archive_name }}.zip
 
       - name: Create release
         uses: actions/create-release@v1
         id: create_release
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: ${{ inputs.archive_name }}_${{ github.sha }}
@@ -40,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ inputs.archive_name }}
-          asset_name: ${{ inputs.archive_name }}
+          asset_path: ./${{ inputs.archive_name }}.zip
+          asset_name: ${{ inputs.archive_name }}.zip
           asset_content_type: application/zip
