--- a/.github/workflows/release_user_config.yml
+++ b/.github/workflows/release_user_config.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download merged artifact
+      - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: ${{ inputs.archive_name }}.zip
+          name: ${{ inputs.archive_name }}
 
       - name: Create release
         uses: actions/create-release@v1
@@ -40,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ inputs.archive_name }}.zip
-          asset_name: ${{ inputs.archive_name }}.zip
+          asset_path: ./${{ inputs.archive_name }}
+          asset_name: ${{ inputs.archive_name }}
           asset_content_type: application/zip
