--- a/.github/workflows/kb_revxlp_original.yml
+++ b/.github/workflows/kb_revxlp_original.yml
@@ -2,10 +2,10 @@ name: "Build revxlp (original)"
 on: 
   push:
     paths:
-      # - 'revxlp_original/**'
+      - 'revxlp_original/**'
   pull_request:
     paths:
-      # - 'revxlp_original/**'
+      - 'revxlp_original/**'
 
 jobs:
   build_revxlp_original:
@@ -13,9 +13,10 @@ jobs:
     with:
        archive_name: "revxlp_original_firmware"
        work_dir: "./revxlp_original"
-  release_revxlp_original:
-    # if: github.event.pull_request.merged == true && github.base_ref == 'main'
-    needs: build_revxlp_original
-    uses: iamajoe/keyboards/.github/workflows/release_user_config.yml@main
-    with:
-      archive_name: "revxlp_original_firmware"
+  # TODO: fix release, not being able to download the firmware artifact
+  # release_revxlp_original:
+  #   if: github.event.pull_request.merged == true && github.base_ref == 'main'
+  #   needs: build_revxlp_original
+  #   uses: iamajoe/keyboards/.github/workflows/release_user_config.yml@main
+  #   with:
+  #     archive_name: "revxlp_original_firmware"
