--- a/.github/workflows/kb_revxlp_joe.yml
+++ b/.github/workflows/kb_revxlp_joe.yml
@@ -2,17 +2,17 @@ name: "Build revxlp (joe)"
 on: 
   push:
     paths:
-      - 'revxlp_joe/**'
+      - 'config/boards/shields/revxlp_joe/**'
   pull_request:
     paths:
-      - 'revxlp_joe/**'
+      - 'config/boards/shields/revxlp_joe/**'
 
 jobs:
   build_revxlp_joe:
     uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
        archive_name: "revxlp_joe_firmware"
-       work_dir: "./revxlp_joe"
+       # work_dir: "./revxlp_joe"
   # TODO: fix release, not being able to download the firmware artifact
   # release_revxlp_joe:
   #   if: github.event.pull_request.merged == true && github.base_ref == 'main'
