--- a/.github/workflows/kb_revxlp_original.yml
+++ b/.github/workflows/kb_revxlp_original.yml
@@ -2,17 +2,17 @@ name: "Build revxlp (original)"
 on: 
   push:
     paths:
-      - 'revxlp_original/**'
+      - 'config/boards/shields/revxlp/**'
   pull_request:
     paths:
-      - 'revxlp_original/**'
+      - 'config/boards/shields/revxlp/**'
 
 jobs:
   build_revxlp_original:
     uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
        archive_name: "revxlp_original_firmware"
-       work_dir: "./revxlp_original"
+       # work_dir: "./revxlp_original"
   # TODO: fix release, not being able to download the firmware artifact
   # release_revxlp_original:
   #   if: github.event.pull_request.merged == true && github.base_ref == 'main'
