--- a/.github/workflows/kb_revxlp_original.yml
+++ b/.github/workflows/kb_revxlp_original.yml
@@ -11,6 +11,7 @@ jobs:
   build_revxlp_original:
     uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
+       build_matrix_path: "config/boards/shields/revxlp/build.yaml"
        archive_name: "revxlp_original_firmware"
        # work_dir: "./revxlp_original"
   # TODO: fix release, not being able to download the firmware artifact
