--- a/.github/workflows/kb_revxlp_joe.yml
+++ b/.github/workflows/kb_revxlp_joe.yml
@@ -11,6 +11,7 @@ jobs:
   build_revxlp_joe:
     uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
+       build_matrix_path: "config/boards/shields/revxlp_joe/build.yaml"
        archive_name: "revxlp_joe_firmware"
        # work_dir: "./revxlp_joe"
   # TODO: fix release, not being able to download the firmware artifact
