--- a/.github/workflows/kb_revxlp_joe.yml
+++ b/.github/workflows/kb_revxlp_joe.yml
@@ -2,16 +2,18 @@ name: "Build revxlp (joe)"
 on: 
   push:
     paths:
-      - 'config/boards/shields/revxlp_joe/**'
+      - '.github/workflows/kb_revxlp_joe.yml'
+      - 'boards/shields/revxlp_joe/**'
   pull_request:
     paths:
-      - 'config/boards/shields/revxlp_joe/**'
+      - '.github/workflows/kb_revxlp_joe.yml'
+      - 'boards/shields/revxlp_joe/**'
 
 jobs:
   build_revxlp_joe:
     uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
-       build_matrix_path: "config/boards/shields/revxlp_joe/build.yaml"
+       build_matrix_path: "boards/shields/revxlp_joe/build.yaml"
        config_path: "."
        archive_name: "revxlp_joe_firmware"
        # work_dir: "./revxlp_joe"
