--- a/.github/workflows/kb_revxlp_original.yml
+++ b/.github/workflows/kb_revxlp_original.yml
@@ -2,16 +2,18 @@ name: "Build revxlp (original)"
 on: 
   push:
     paths:
-      - 'config/boards/shields/revxlp/**'
+      - '.github/workflows/kb_revxlp_original.yml'
+      - 'boards/shields/revxlp/**'
   pull_request:
     paths:
-      - 'config/boards/shields/revxlp/**'
+      - '.github/workflows/kb_revxlp_original.yml'
+      - 'boards/shields/revxlp/**'
 
 jobs:
   build_revxlp_original:
     uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
     with:
-       build_matrix_path: "config/boards/shields/revxlp/build.yaml"
+       build_matrix_path: "boards/shields/revxlp/build.yaml"
        config_path: "."
        archive_name: "revxlp_original_firmware"
        # work_dir: "./revxlp_original"
