fix reference to see if it works

--- a/.github/workflows/kb_revxlp_joe.yml
+++ b/.github/workflows/kb_revxlp_joe.yml
@@ -11,7 +11,8 @@ on:
 
 jobs:
   build:
-    uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
+    # TODO: to be changed to main when merging
+    uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@diff_structure
     with:
        shield: "revxlp_joe"
   # TODO: fix release, not being able to download the firmware artifact
