--- a/.github/workflows/kb_revxlp_joe.yml
+++ b/.github/workflows/kb_revxlp_joe.yml
@@ -2,10 +2,12 @@ name: "Build revxlp (joe)"
 on: 
   push:
     paths:
+      - '.github/workflows/build_user_config.yml'
       - '.github/workflows/kb_revxlp_joe.yml'
       - 'boards/revxlp_joe/**'
   pull_request:
     paths:
+      - '.github/workflows/build_user_config.yml'
       - '.github/workflows/kb_revxlp_joe.yml'
       - 'boards/revxlp_joe/**'
 
