--- a/.github/workflows/kb_revxlp_original.yml
+++ b/.github/workflows/kb_revxlp_original.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@main
+    uses: iamajoe/keyboards/.github/workflows/build_user_config.yml@diff_structure
     with:
        shield: "revxlp"
   # TODO: fix release, not being able to download the firmware artifact
