--- a/.github/workflows/build_user_config.yml
+++ b/.github/workflows/build_user_config.yml
@@ -68,15 +68,9 @@ jobs:
           # Copy the required folders
           mkdir -p config/boards/shields
           cp -rf shields/${{ inputs.shield }} config/boards/shields/${{ inputs.shield }}
+          cp -rf helpers config/boards/shields/${{ inputs.shield }}/helpers
           cp -rf boards config/boards/shields/${{ inputs.shield }}/boards
           cp -rf west.yml config/west.yml
-          # Do we have all in place?
-          echo "Config folder:"
-          ls config
-          echo "Shield folder:"
-          ls config/boards/shields/${{ inputs.shield }}
-          echo "Boards available:"
-          ls config/boards/shields/${{ inputs.shield }}/boards
           # Remove so that it doesn't collide when grepping with **
           rm -rf boards shields west.yml
 
@@ -84,6 +78,10 @@ jobs:
       # NOTE: Copied from:
       # https://github.com/zmkfirmware/zmk/blob/main/.github/workflows/build-user-config.yml
       #
+
+      - name: Create build directory
+        run: |
+          echo "build_dir=$(mktemp -d)" >> $GITHUB_ENV
       - name: Prepare variables
         shell: sh -x {0}
         env:
