--- a/shields/revxlp_joe/build.yaml
+++ b/shields/revxlp_joe/build.yaml
@@ -1,2 +1,3 @@
-board: [seeeduino_xiao, seeeduino_xiao_ble, seeeduino_xiao_rp2040]
+# board: [seeeduino_xiao, seeeduino_xiao_ble, seeeduino_xiao_rp2040]
+board: [seeeduino_xiao_ble]
 shield: [revxlp_joe]
