--- a/.github/workflows/build_user_config.yml
+++ b/.github/workflows/build_user_config.yml
@@ -68,7 +68,6 @@ jobs:
           # Copy the required folders
           mkdir -p config/boards/shields
           cp -rf shields/${{ inputs.shield }} config/boards/shields/${{ inputs.shield }}
-          cp -rf shields/${{ inputs.shield }}/*.keymap config/boards/shields/${{ inputs.shield }}/keymap.keymap
           cp -rf helpers config/boards/shields/${{ inputs.shield }}/helpers
           cp -rf boards config/boards/shields/${{ inputs.shield }}/boards
           cp -rf west.yml config/west.yml
@@ -115,6 +114,7 @@ jobs:
           if [ "${{ env.base_dir }}" != "${GITHUB_WORKSPACE}" ]; then
             mkdir "${{ env.base_dir }}/${{ inputs.config_path }}"
             cp -R ${{ inputs.config_path }}/* "${{ env.base_dir }}/${{ inputs.config_path }}/"
+            ls ${{ env.base_dir }}/${{ inputs.config_path }}/boards/shields/${{inputs.shield}}
           fi
 
       - name: Cache west modules
