--- a/shields/splitkb_aurora_sofle/splitkb_aurora_sofle.dtsi
+++ b/shields/splitkb_aurora_sofle/splitkb_aurora_sofle.dtsi
@@ -37,48 +37,48 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(4,5) RC(4,6) RC(3,6) RC(3,7) 
         >;
     };
 
-    left_encoder: left_encoder {
-        compatible = "alps,ec11";
-        steps = <144>;
-        status = "disabled";
+    // left_encoder: left_encoder {
+    //     compatible = "alps,ec11";
+    //     steps = <144>;
+    //     status = "disabled";
+    //
+    //     a-gpios = <&pro_micro 16 GPIO_PULL_UP>;
+    //     b-gpios = <&pro_micro 10 GPIO_PULL_UP>;
+    // };
 
-        a-gpios = <&pro_micro 16 GPIO_PULL_UP>;
-        b-gpios = <&pro_micro 10 GPIO_PULL_UP>;
-    };
+    // right_encoder: right_encoder {
+    //     compatible = "alps,ec11";
+    //     steps = <144>;
+    //     status = "disabled";
+    //
+    //     a-gpios = <&pro_micro 16 GPIO_PULL_UP>;
+    //     b-gpios = <&pro_micro 10 GPIO_PULL_UP>;
+    // };
 
-    right_encoder: right_encoder {
-        compatible = "alps,ec11";
-        steps = <144>;
-        status = "disabled";
-
-        a-gpios = <&pro_micro 16 GPIO_PULL_UP>;
-        b-gpios = <&pro_micro 10 GPIO_PULL_UP>;
-    };
-
-    sensors: sensors {
-        compatible = "zmk,keymap-sensors";
-        sensors = <&left_encoder &right_encoder>;
-        triggers-per-rotation = <36>;
-    };
+    // sensors: sensors {
+    //     compatible = "zmk,keymap-sensors";
+    //     sensors = <&left_encoder &right_encoder>;
+    //     triggers-per-rotation = <36>;
+    // };
 };
 
-&pro_micro_i2c {
-    status = "okay";
-
-    oled: ssd1306@3c {
-        compatible = "solomon,ssd1306fb";
-        reg = <0x3c>;
-        width = <128>;
-        height = <32>;
-        segment-offset = <0>;
-        page-offset = <0>;
-        display-offset = <0>;
-        multiplex-ratio = <31>;
-        segment-remap;
-        com-invdir;
-        com-sequential;
-        inversion-on;
-        prechargep = <0x22>;
-    };
-};
+// &pro_micro_i2c {
+//     status = "okay";
+//
+//     oled: ssd1306@3c {
+//         compatible = "solomon,ssd1306fb";
+//         reg = <0x3c>;
+//         width = <128>;
+//         height = <32>;
+//         segment-offset = <0>;
+//         page-offset = <0>;
+//         display-offset = <0>;
+//         multiplex-ratio = <31>;
+//         segment-remap;
+//         com-invdir;
+//         com-sequential;
+//         inversion-on;
+//         prechargep = <0x22>;
+//     };
+// };
 
