--- a/shields/splitkb_aurora_sofle/splitkb_aurora_sofle.dtsi
+++ b/shields/splitkb_aurora_sofle/splitkb_aurora_sofle.dtsi
@@ -15,7 +15,7 @@
 / {
 
     chosen {
-        zephyr,display = &oled;
+        // zephyr,display = &oled;
         zmk,physical-layout = &josefadamcik_sofle_layout;
     };
 
